<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:title="@string/home"/>
            <item
                android:id="@+id/nav_register"
                android:title="@string/register"/>
            <item
                android:id="@+id/nav_consult"
                android:title="@string/consult"/>
            <item
                android:id="@+id/nav_delete"
                android:title="@string/delete"/>
            <item
                android:id="@+id/nav_modify"
                android:title="@string/modify"/>
            <item
                android:id="@+id/nav_map"
                android:title="@string/mapa_de_google"/>
        </group>


</menu>